<resources>
    <string name="app_name">My App</string>
    <string name="Staff_title">Staff Number</string>
    <string name="Staff_pin">   PIN</string>
    <string name="title_activity_tank_level">TankLevelActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="water_montor_login">WATER MONTOR Login</string>
    <string name="staff_name_number">Staff Name (Number)</string>
    <string name="staff_pin">"    PIN "</string>
    <string name="water_level_monitor_login_screen">WATER LEVEL monitor</string>
</resources>