<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login">

    <TextView
        android:id="@+id/app_display"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/water_montor_login"
        android:text="@string/water_level_monitor_login_screen"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/gree"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_display">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/StaffNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                android:hint="@string/staff_name_number"
                android:inputType="text"
                android:maxLength="7"
                android:minHeight="48dp"

                android:textColorHint="#37474F"
                app:layout_constraintBottom_toTopOf="@+id/StaffPin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/StaffPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="27dp"
                android:drawableEnd="@drawable/ic_baseline_vpn_key_24"
                android:hint="@string/Staff_pin"
                android:inputType="number"
                android:maxLength="9"
                android:minHeight="48dp"
                android:textColorHint="#0A8C91"
                app:layout_constraintBottom_toTopOf="@+id/BtnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="40dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StaffPin" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>